Apply inspections consistent with wanted style ()
* Avoid `final` in local scopes
* Use `final` for non-reassigned fields
* Avoid `var` outside of readability
* Use primative types over `var` in all cases

* Use canonical numeric literals
* Remove redundent `throws`
* Use `EnumSet` over `HashSet` of an `enum`
* Use `record` where appropriate
* Use `static` where appropriate
* Use switch pattern matching where appropriate
* Weaken interfaces where appropriate
* Use java collections over eclipse