@@ -48,7 +48,7 @@ class NativeAllEntriesTokenScanReaderTest {
 
     @Test
     void shouldSeeNonOverlappingRanges() throws Exception {
-        var idLayout = new DefaultTokenIndexIdLayout();
+        DefaultTokenIndexIdLayout idLayout = new DefaultTokenIndexIdLayout();
         // new ranges at: 0, 4, 8, 12 ...
         shouldIterateCorrectlyOver(
                 idLayout,
@@ -60,7 +60,7 @@ class NativeAllEntriesTokenScanReaderTest {
 
     @Test
     void shouldSeeOverlappingRanges() throws Exception {
-        var idLayout = new DefaultTokenIndexIdLayout();
+        DefaultTokenIndexIdLayout idLayout = new DefaultTokenIndexIdLayout();
         // new ranges at: 0, 4, 8, 12 ...
         shouldIterateCorrectlyOver(
                 idLayout,
@@ -72,7 +72,7 @@ class NativeAllEntriesTokenScanReaderTest {
 
     @Test
     void shouldSeeRangesFromRandomData() throws Exception {
-        var idLayout = new DefaultTokenIndexIdLayout();
+        DefaultTokenIndexIdLayout idLayout = new DefaultTokenIndexIdLayout();
         List<Labels> labels = randomData(random, idLayout);
 
         shouldIterateCorrectlyOver(idLayout, labels.toArray(Labels[]::new));
@@ -161,14 +161,14 @@ class NativeAllEntriesTokenScanReaderTest {
     private static long highestRangeId(Labels[] data) {
         long highest = 0;
         for (Labels labels : data) {
-            Pair<TokenScanKey, TokenScanValue> highestEntry = labels.entries.get(labels.entries.size() - 1);
+            Pair<TokenScanKey, TokenScanValue> highestEntry = labels.entries.getLast();
             highest = max(highest, highestEntry.first().idRange);
         }
         return highest;
     }
 
     private static IntFunction<Seeker<TokenScanKey, TokenScanValue>> store(Labels... labels) {
-        final MutableIntObjectMap<Labels> labelsMap = new IntObjectHashMap<>(labels.length);
+        MutableIntObjectMap<Labels> labelsMap = new IntObjectHashMap<>(labels.length);
         for (Labels item : labels) {
             labelsMap.put(item.labelId, item);
         }
