@@ -72,7 +72,7 @@ final class Lucene9DocValuesCollectorTest {
         assertEquals(4, collector.getTotalHits());
         List<Lucene9DocValuesCollector.MatchingDocs> allMatchingDocs = collector.getMatchingDocs();
         assertEquals(1, allMatchingDocs.size());
-        Lucene9DocValuesCollector.MatchingDocs matchingDocs = allMatchingDocs.get(0);
+        Lucene9DocValuesCollector.MatchingDocs matchingDocs = allMatchingDocs.getFirst();
         assertSame(readerStub.getContext(), matchingDocs.context);
         assertEquals(4, matchingDocs.totalHits);
         DocIdSetIterator idIterator = matchingDocs.docIdSet;
@@ -102,7 +102,7 @@ final class Lucene9DocValuesCollectorTest {
         List<Lucene9DocValuesCollector.MatchingDocs> allMatchingDocs = collector.getMatchingDocs();
         assertEquals(2, allMatchingDocs.size());
 
-        Lucene9DocValuesCollector.MatchingDocs matchingDocs = allMatchingDocs.get(0);
+        Lucene9DocValuesCollector.MatchingDocs matchingDocs = allMatchingDocs.getFirst();
         assertSame(readerStub.getContext(), matchingDocs.context);
         assertEquals(2, matchingDocs.totalHits);
         DocIdSetIterator idIterator = matchingDocs.docIdSet;
