@@ -116,30 +116,30 @@ public abstract class SpaceFillingCurve {
      * Given a coordinate in multiple dimensions, calculate its derived key for maxLevel
      * Needs to be public due to dependency from Neo4j Spatial
      */
-    public long derivedValueFor(double[] coord) {
-        return derivedValueFor(coord, maxLevel);
+    public long derivedValueFor(double... coord) {
+        return derivedValueFor(maxLevel, coord);
     }
 
     /**
      * Given a coordinate in multiple dimensions, calculate its derived key for given level
      */
-    private long derivedValueFor(double[] coord, int level) {
+    private long derivedValueFor(int level, double... coord) {
         assertValidLevel(level);
         long[] normalizedValues = getNormalizedCoord(coord);
-        return derivedValueFor(normalizedValues, level);
+        return derivedValueFor(level, normalizedValues);
     }
 
     /**
      * Given a normalized coordinate in multiple dimensions, calculate its derived key for maxLevel
      */
-    public long derivedValueFor(long[] normalizedValues) {
-        return derivedValueFor(normalizedValues, maxLevel);
+    public long derivedValueFor(long... normalizedValues) {
+        return derivedValueFor(maxLevel, normalizedValues);
     }
 
     /**
      * Given a normalized coordinate in multiple dimensions, calculate its derived key for given level
      */
-    private long derivedValueFor(long[] normalizedValues, int level) {
+    private long derivedValueFor(int level, long... normalizedValues) {
         assertValidLevel(level);
         long derivedValue = 0;
         long mask = 1L << (maxLevel - 1);
@@ -171,21 +171,21 @@ public abstract class SpaceFillingCurve {
      * Given a derived key, find the center coordinate of the corresponding tile at maxLevel
      */
     public double[] centerPointFor(long derivedValue) {
-        return centerPointFor(derivedValue, maxLevel);
+        return centerPointFor(maxLevel, derivedValue);
     }
 
     /**
      * Given a derived key, find the center coordinate of the corresponding tile at given level
      */
-    private double[] centerPointFor(long derivedValue, int level) {
-        long[] normalizedCoord = normalizedCoordinateFor(derivedValue, level);
-        return getDoubleCoord(normalizedCoord, level);
+    private double[] centerPointFor(int level, long derivedValue) {
+        long[] normalizedCoord = normalizedCoordinateFor(level, derivedValue);
+        return getDoubleCoord(level, normalizedCoord);
     }
 
     /**
      * Given a derived key, find the normalized coordinate it corresponds to on a specific level
      */
-    long[] normalizedCoordinateFor(long derivedValue, int level) {
+    long[] normalizedCoordinateFor(int level, long derivedValue) {
         assertValidLevel(level);
         long mask = initialNormMask;
         long[] coordinate = new long[nbrDim];
@@ -222,7 +222,7 @@ public abstract class SpaceFillingCurve {
      */
     List<LongRange> getTilesIntersectingEnvelope(Envelope referenceEnvelope) {
         return getTilesIntersectingEnvelope(
-                referenceEnvelope.getMin(), referenceEnvelope.getMax(), new StandardConfiguration());
+                referenceEnvelope.min(), referenceEnvelope.max(), new StandardConfiguration());
     }
 
     public List<LongRange> getTilesIntersectingEnvelope(
@@ -280,7 +280,7 @@ public abstract class SpaceFillingCurve {
             for (int i = 0; i < quadFactor; i++) {
                 SearchEnvelope quadrant = currentExtent.quadrant(curve.npointForIndex(i));
                 if (width == 1L) {
-                    long[] coord = normalizedCoordinateFor(left + i, maxLevel);
+                    long[] coord = normalizedCoordinateFor(maxLevel, left + i);
                     if (search.contains(coord)) {
                         computeTilesIntersectionEnvelopeAt(monitor, depth, quadrant, left + i, left + i, results);
                     }
@@ -309,7 +309,7 @@ public abstract class SpaceFillingCurve {
             long newMax,
             List<LongRange> results) {
         // Note that LongRange upper bound is inclusive, hence the '-1' in several places
-        LongRange current = results.isEmpty() ? null : results.get(results.size() - 1);
+        LongRange current = results.isEmpty() ? null : results.getLast();
         if (current != null && current.max == left - 1) {
             current.expandToMax(newMax);
         } else {
@@ -325,7 +325,7 @@ public abstract class SpaceFillingCurve {
     /**
      * Given a coordinate, find the corresponding normalized coordinate
      */
-    long[] getNormalizedCoord(double[] coord) {
+    long[] getNormalizedCoord(double... coord) {
         long[] normalizedCoord = new long[nbrDim];
 
         for (int dim = 0; dim < nbrDim; dim++) {
@@ -354,7 +354,7 @@ public abstract class SpaceFillingCurve {
                         + getTileWidth(dim, maxLevel) / 2.0;
                 // The 1E-16 is to create the behavior of the [min,max) bounds without an expensive if...else if...else
                 // check
-                long normalizedOffset = (long) ((value - tileCenter) * scalingFactor[dim] - 0.5 + 1E-16);
+                long normalizedOffset = (long) ((value - tileCenter) * scalingFactor[dim] - 0.5 + 1.0E-16);
                 // normalizedOffset is almost always 0, but can be +1 or -1 if there were rounding errors we need to
                 // correct for, we should never overcompensate though so that we end up outside [0, width)
                 normalizedCoord[dim] = Math.clamp(normalizedCoord[dim] + normalizedOffset, 0, width - 1);
@@ -366,7 +366,7 @@ public abstract class SpaceFillingCurve {
     /**
      * Given a normalized coordinate, find the center coordinate of that tile  on the given level
      */
-    private double[] getDoubleCoord(long[] normalizedCoord, int level) {
+    private double[] getDoubleCoord(int level, long... normalizedCoord) {
         double[] coord = new double[nbrDim];
 
         for (int dim = 0; dim < nbrDim; dim++) {
